k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-manager2
  labels:
    app: project-manager2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: project-manager2
  template:
    metadata:
      labels:
        app: project-manager2
    spec:
      containers:
        - name: project-manager2
          image: olegoy/docker-repo:project-manager2
          ports:
            - containerPort: 8081
