k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-manager2
spec:
  selector:
    app: project-manager2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
