k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: olegoy
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /ProjectManager2
            backend:
              service:
                name: project-manager2
                port:
                  number: 80
